@@ -286,8 +286,7 @@ public class RaidesService {
         }
 
         if (lastCompletedQualification.getEducationLevelType() != null) {
-            String value = Objects.requireNonNullElse(LegalMapping.find(report, LegalMappingType.PRECEDENT_EDUCATION_LEVEL),
-                            LegalMapping.find(report, LegalMappingType.PRECEDENT_SCHOOL_LEVEL))
+            String value = LegalMapping.find(report, LegalMappingType.PRECEDENT_EDUCATION_LEVEL)
                     .translate(lastCompletedQualification.getEducationLevelType());
 
             if (StringUtils.isBlank(value)) {
@@ -669,8 +668,7 @@ public class RaidesService {
         if (ingressionData != null) {
             if (ingressionData.getFatherEducationLevelType() != null) {
 
-                String value = Objects.requireNonNullElse(LegalMapping.find(report, LegalMappingType.EDUCATION_LEVEL),
-                                LegalMapping.find(report, LegalMappingType.SCHOOL_LEVEL))
+                String value = LegalMapping.find(report, LegalMappingType.EDUCATION_LEVEL)
                         .translate(ingressionData.getFatherEducationLevelType());
 
                 if (StringUtils.isBlank(value)) {
@@ -689,8 +687,7 @@ public class RaidesService {
 
             if (ingressionData.getMotherEducationLevelType() != null) {
 
-                String value = Objects.requireNonNullElse(LegalMapping.find(report, LegalMappingType.EDUCATION_LEVEL),
-                                LegalMapping.find(report, LegalMappingType.SCHOOL_LEVEL))
+                String value = LegalMapping.find(report, LegalMappingType.EDUCATION_LEVEL)
                         .translate(ingressionData.getMotherEducationLevelType());
 
                 if (StringUtils.isBlank(value)) {
@@ -709,8 +706,7 @@ public class RaidesService {
 
             if (ingressionData.getFatherProfessionalStatusType() != null) {
 
-                String value = Objects.requireNonNullElse(LegalMapping.find(report, LegalMappingType.PROFESSIONAL_STATUS),
-                                LegalMapping.find(report, LegalMappingType.PROFESSIONAL_SITUATION_CONDITION))
+                String value = LegalMapping.find(report, LegalMappingType.PROFESSIONAL_STATUS)
                         .translate(ingressionData.getFatherProfessionalStatusType());
 
                 if (StringUtils.isBlank(value)) {
@@ -732,8 +728,7 @@ public class RaidesService {
 
         if (ingressionData.getMotherProfessionalStatusType() != null) {
 
-            String value = Objects.requireNonNullElse(LegalMapping.find(report, LegalMappingType.PROFESSIONAL_STATUS),
-                            LegalMapping.find(report, LegalMappingType.PROFESSIONAL_SITUATION_CONDITION))
+            String value = LegalMapping.find(report, LegalMappingType.PROFESSIONAL_STATUS)
                     .translate(ingressionData.getMotherProfessionalStatusType());
 
             if (StringUtils.isBlank(value)) {
@@ -751,8 +746,7 @@ public class RaidesService {
 
         if (ingressionData.getProfessionalStatusType() != null) {
 
-            String value = Objects.requireNonNullElse(LegalMapping.find(report, LegalMappingType.PROFESSIONAL_STATUS),
-                            LegalMapping.find(report, LegalMappingType.PROFESSIONAL_SITUATION_CONDITION))
+            String value = LegalMapping.find(report, LegalMappingType.PROFESSIONAL_STATUS)
                     .translate(ingressionData.getProfessionalStatusType());
 
             if (StringUtils.isBlank(value)) {
@@ -772,8 +766,7 @@ public class RaidesService {
 
         if (ingressionData.getFatherProfessionCategoryType() != null) {
 
-            String value = Objects.requireNonNullElse(LegalMapping.find(report, LegalMappingType.PROFESSION_CATEGORY),
-                            LegalMapping.find(report, LegalMappingType.PROFESSION_TYPE))
+            String value = LegalMapping.find(report, LegalMappingType.PROFESSION_CATEGORY)
                     .translate(ingressionData.getFatherProfessionCategoryType());
 
             if (StringUtils.isBlank(value)) {
@@ -792,8 +785,7 @@ public class RaidesService {
 
         if (ingressionData.getMotherProfessionCategoryType() != null) {
 
-            String value = Objects.requireNonNullElse(LegalMapping.find(report, LegalMappingType.PROFESSION_CATEGORY),
-                            LegalMapping.find(report, LegalMappingType.PROFESSION_TYPE))
+            String value = LegalMapping.find(report, LegalMappingType.PROFESSION_CATEGORY)
                     .translate(ingressionData.getMotherProfessionCategoryType());
 
             if (StringUtils.isBlank(value)) {
@@ -812,8 +804,7 @@ public class RaidesService {
 
         if (ingressionData.getProfessionCategoryType() != null) {
 
-            String value = Objects.requireNonNullElse(LegalMapping.find(report, LegalMappingType.PROFESSION_CATEGORY),
-                            LegalMapping.find(report, LegalMappingType.PROFESSION_TYPE))
+            String value = LegalMapping.find(report, LegalMappingType.PROFESSION_CATEGORY)
                     .translate(ingressionData.getProfessionCategoryType());
 
             if (StringUtils.isBlank(value)) {
