@@ -1,3 +1,5 @@
+- Refactor: Cleans up RAIDES enums refactor [#qubIT-Fenix-7009]
+
 2.25.1 (04-08-2025)
 - Refactor: removes references of StudentCandidacy [#qubIT-Fenix-6559]
 
